gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: medisupply-gateway
spec:
  gatewayClassName: istio
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: medisupply
spec:
  parentRefs:
  - name: medisupply-gateway
  rules:
  # Sales service routing
  - matches:
      - path:
          type: PathPrefix
          value: /api/v1/sales
    filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /
    backendRefs:
      - name: sales
        port: 3000
  # Batches service routing
  - matches:
      - path:
          type: PathPrefix
          value: /api/v1/batches
    filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /
    backendRefs:
      - name: batches
        port: 3000
    # Distribution centers service routing
  - matches:
      - path:
          type: PathPrefix
          value: /api/v1/distribution-centers
    filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /
    backendRefs:
      - name: distribution-centers
        port: 3000
    # Regulations service routing
  - matches:
        - path:
            type: PathPrefix
            value: /api/v1/regulations
    filters:
          - type: URLRewrite
            urlRewrite:
              path:
                type: ReplacePrefixMatch
                replacePrefixMatch: /
    backendRefs:
          - name: regulations
            port: 3000
    # Alerts service routing
  - matches:
      - path:
          type: PathPrefix
          value: /api/v1/alerts
    filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /
    backendRefs:
      - name: alerts
        port: 3000
  # Trips service routing
  - matches:
      - path:
          type: PathPrefix
          value: /api/v1/trips
    filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /
    backendRefs:
      - name: trips
        port: 3000
  # Trips service routing
  - matches:
      - path:
          type: PathPrefix
          value: /api/v1/vehicles
    filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /
    backendRefs:
      - name: vehicles
        port: 3000
